# datakwip-functional-tests

./: .env.example  .gitignore  IMPLEMENTATION_REPORT.md  KEYCLOAK_SETUP.md  Prompt.md  README.md  SETUP_STATUS.md  check_user.py  conftest.py  create_test_user_in_db.py  debug_realm.py  pyproject.toml  setup_test_user.sql  troubleshoot_oauth.md
clients/: __init__.py  api_client.py  auth_client.py  mcp_client.py  ui_client.py
tests/: __init__.py  test_api.py  test_auth.py  test_integration.py  test_mcp.py  test_ui.py
